feat: Refactor food suggestion mechanism to use AI recommendations and rule-based fallback
- Updated MenuService interface to change suggestFood method return type to AiRecommendationResponse.
- Modified MenuServiceImpl to implement AI-based food suggestions using suggestFoodWithAi and fallback to rule-based recommendations.
- Introduced NutritionScoringService to evaluate menu items based on health criteria.
- Created RuleBasedRecommendationService to generate meal combos based on user preferences and available menu items.
- Updated MenuBranchControllerTest to reflect changes in food suggestion response structure.
- Enhanced MenuServiceImplTest to validate new recommendation logic and ensure fallback mechanisms work as intended.
- Added comprehensive tests for RuleBasedRecommendationService to cover combo generation, budget filtering, and health scoring.