@@ -14,12 +14,7 @@ import org.springframework.web.client.RestClient;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -29,6 +24,7 @@ public class GeminiFoodSuggestionClient implements FoodSuggestionAiClient {
     private static final int MAX_MENU_ITEMS_SENT_TO_MODEL = 40;
 
     private final ObjectMapper objectMapper;
+    private final NutritionScoringService nutritionScoringService;
     private final RestClient restClient;
     private final boolean enabled;
     private final String apiKey;
@@ -36,6 +32,7 @@ public class GeminiFoodSuggestionClient implements FoodSuggestionAiClient {
 
     public GeminiFoodSuggestionClient(
             ObjectMapper objectMapper,
+            NutritionScoringService nutritionScoringService,
             @Value("${app.ai.food-suggestions.enabled:true}") boolean enabled,
             @Value("${app.ai.gemini.api-key:}") String apiKey,
             @Value("${app.ai.gemini.base-url:https://generativelanguage.googleapis.com/v1beta}") String baseUrl,
@@ -43,6 +40,7 @@ public class GeminiFoodSuggestionClient implements FoodSuggestionAiClient {
             @Value("${app.ai.gemini.timeout-ms:15000}") int timeoutMs
     ) {
         this.objectMapper = objectMapper;
+        this.nutritionScoringService = nutritionScoringService;
         this.enabled = enabled;
         this.apiKey = apiKey;
         this.model = model;
@@ -57,23 +55,23 @@ public class GeminiFoodSuggestionClient implements FoodSuggestionAiClient {
     }
 
     @Override
-    public Optional<MenuDtos.FoodSuggestionResponse> suggestFood(
+    public Optional<MenuDtos.AiRecommendationResponse> suggestFood(
             MenuDtos.FoodSuggestionRequest request,
             List<MenuItem> activeItems,
             List<String> missingQuestions
     ) {
         if (!enabled) {
-            log.debug("Gemini food suggestions disabled (app.ai.food-suggestions.enabled=false)");
+            log.debug("Gemini food suggestions disabled");
             return Optional.empty();
         }
         if (!hasText(apiKey)) {
-            log.warn("Gemini food suggestions enabled but GEMINI_API_KEY is not set — skipping AI call");
+            log.warn("GEMINI_API_KEY is not set — skipping Gemini call");
             return Optional.empty();
         }
 
         Map<String, MenuItem> menuById = activeItems.stream()
                 .filter(item -> hasText(item.getId()))
-                .collect(Collectors.toMap(MenuItem::getId, item -> item, (left, right) -> left, LinkedHashMap::new));
+                .collect(Collectors.toMap(MenuItem::getId, item -> item, (l, r) -> l, LinkedHashMap::new));
 
         try {
             Map<String, Object> geminiRequest = buildGeminiRequest(request, activeItems, missingQuestions);
@@ -85,18 +83,16 @@ public class GeminiFoodSuggestionClient implements FoodSuggestionAiClient {
                     .body(byte[].class);
 
             JsonNode response = (rawBytes == null || rawBytes.length == 0)
-                    ? null
-                    : objectMapper.readTree(rawBytes);
+                    ? null : objectMapper.readTree(rawBytes);
 
             String content = response == null
-                    ? ""
-                    : response.at("/candidates/0/content/parts/0/text").asText("");
+                    ? "" : response.at("/candidates/0/content/parts/0/text").asText("");
             if (!hasText(content)) {
                 log.warn("Gemini returned empty content");
                 return Optional.empty();
             }
 
-            AiFoodSuggestion aiResponse = objectMapper.readValue(content, AiFoodSuggestion.class);
+            AiComboResponse aiResponse = objectMapper.readValue(content, AiComboResponse.class);
             return Optional.of(toResponse(aiResponse, request, menuById, missingQuestions));
         } catch (Exception e) {
             log.warn("Gemini food suggestion failed ({}): {}", e.getClass().getSimpleName(), e.getMessage());
@@ -104,39 +100,40 @@ public class GeminiFoodSuggestionClient implements FoodSuggestionAiClient {
         }
     }
 
+    // ── Gemini request ─────────────────────────────────────────────────────────────
+
     private Map<String, Object> buildGeminiRequest(
             MenuDtos.FoodSuggestionRequest request,
             List<MenuItem> activeItems,
             List<String> missingQuestions
     ) {
-        Map<String, Object> geminiRequest = new LinkedHashMap<>();
-        geminiRequest.put("system_instruction", Map.of(
-                "parts", List.of(Map.of("text", systemPrompt()))
-        ));
-        geminiRequest.put("contents", List.of(
-                Map.of("role", "user", "parts", List.of(Map.of("text", userPrompt(request, activeItems, missingQuestions))))
-        ));
-        geminiRequest.put("generationConfig", Map.of(
+        Map<String, Object> req = new LinkedHashMap<>();
+        req.put("system_instruction", Map.of("parts", List.of(Map.of("text", systemPrompt()))));
+        req.put("contents", List.of(
+                Map.of("role", "user", "parts",
+                       List.of(Map.of("text", userPrompt(request, activeItems, missingQuestions))))));
+        req.put("generationConfig", Map.of(
                 "temperature", 0.2,
                 "responseMimeType", "application/json",
-                "responseSchema", responseSchema()
-        ));
-        return geminiRequest;
+                "responseSchema", responseSchema()));
+        return req;
     }
 
     private String systemPrompt() {
         return """
-                You are FoodChain's food suggestion agent.
-                Your job is to guide a customer with short questions when preference details are missing,
-                then recommend suitable menu items from the restaurant menu.
+                You are FoodChain's AI food assistant.
+                Your job is to guide customers with short questions when preference details are missing,
+                then recommend healthy and balanced MEAL COMBOS from the restaurant menu.
 
                 Rules:
-                - If required preferences are missing, set readyForSuggestions=false and ask only those missing questions.
-                - If enough preferences are provided, set readyForSuggestions=true and choose menu items only from the provided menu_items list.
+                - If required preferences are missing, set readyForSuggestions=false and list the missing questions.
+                - If enough preferences are provided, set readyForSuggestions=true and build combos using ONLY IDs from the provided menu_items list.
+                - Each combo should include 2–4 complementary items (e.g. main + side + drink, or breakfast + juice).
                 - Never invent menu item IDs, names, prices, restaurants, or branches.
-                - Prefer items that fit budget, meal type, appetite, dietary preferences, people count, and fulfillment type.
-                - Keep reasons friendly, practical, and under 22 words.
-                - Optional add-ons should be short menu-combo ideas, not invented priced items.
+                - Prioritise nutritional balance, budget fit, dietary compatibility, and popularity.
+                - Assign wellnessTags only from: Balanced, High Protein, Low Sugar, High Fiber.
+                - Keep reasons friendly, practical, and under 25 words.
+                - Vary combo names to reflect the meal occasion (e.g. Healthy Breakfast Combo, Family Feast Combo).
                 """;
     }
 
@@ -150,10 +147,9 @@ public class GeminiFoodSuggestionClient implements FoodSuggestionAiClient {
             preferences.put("budget", request == null ? null : request.budget());
             preferences.put("mealType", request == null ? null : request.mealType());
             preferences.put("appetite", request == null ? null : request.appetite());
-            preferences.put("dietaryPreferences", request == null ? List.of() : nullToEmptyList(request.dietaryPreferences()));
+            preferences.put("dietaryPreferences", request == null ? List.of() : nullToList(request.dietaryPreferences()));
             preferences.put("peopleCount", request == null ? null : request.peopleCount());
             preferences.put("fulfillmentType", request == null ? null : request.fulfillmentType());
-            preferences.put("branchId", request == null ? null : request.branchId());
             preferences.put("branchName", request == null ? null : request.branchName());
             preferences.put("limit", request == null ? null : request.limit());
 
@@ -161,10 +157,9 @@ public class GeminiFoodSuggestionClient implements FoodSuggestionAiClient {
             prompt.put("customer_preferences", preferences);
             prompt.put("missing_questions", missingQuestions);
             prompt.put("menu_items", menuPayload(activeItems));
-
             return objectMapper.writeValueAsString(prompt);
         } catch (Exception e) {
-            throw new IllegalStateException("Failed to build AI suggestion prompt", e);
+            throw new IllegalStateException("Failed to build Gemini prompt", e);
         }
     }
 
@@ -185,98 +180,107 @@ public class GeminiFoodSuggestionClient implements FoodSuggestionAiClient {
     }
 
     private Map<String, Object> responseSchema() {
-        Map<String, Object> suggestionItemSchema = new LinkedHashMap<>();
-        suggestionItemSchema.put("type", "OBJECT");
-        suggestionItemSchema.put("properties", Map.of(
-                "menuItemId", Map.of("type", "STRING"),
-                "reason", Map.of("type", "STRING"),
-                "optionalAddOns", Map.of("type", "ARRAY", "items", Map.of("type", "STRING"))
+        Map<String, Object> comboItem = new LinkedHashMap<>();
+        comboItem.put("type", "OBJECT");
+        comboItem.put("properties", Map.of(
+                "comboName", Map.of("type", "STRING"),
+                "itemIds",   Map.of("type", "ARRAY", "items", Map.of("type", "STRING")),
+                "reason",    Map.of("type", "STRING"),
+                "wellnessTags", Map.of("type", "ARRAY", "items", Map.of("type", "STRING"))
         ));
-        suggestionItemSchema.put("required", List.of("menuItemId", "reason", "optionalAddOns"));
+        comboItem.put("required", List.of("comboName", "itemIds", "reason", "wellnessTags"));
 
         Map<String, Object> schema = new LinkedHashMap<>();
         schema.put("type", "OBJECT");
         schema.put("properties", Map.of(
-                "message", Map.of("type", "STRING"),
-                "readyForSuggestions", Map.of("type", "BOOLEAN"),
-                "questions", Map.of("type", "ARRAY", "items", Map.of("type", "STRING")),
-                "suggestions", Map.of("type", "ARRAY", "items", suggestionItemSchema)
+                "message",              Map.of("type", "STRING"),
+                "readyForSuggestions",  Map.of("type", "BOOLEAN"),
+                "questions",            Map.of("type", "ARRAY", "items", Map.of("type", "STRING")),
+                "suggestions",          Map.of("type", "ARRAY", "items", comboItem)
         ));
         schema.put("required", List.of("message", "readyForSuggestions", "questions", "suggestions"));
         return schema;
     }
 
-    private MenuDtos.FoodSuggestionResponse toResponse(
-            AiFoodSuggestion aiResponse,
+    // ── Response mapping ───────────────────────────────────────────────────────────
+
+    private MenuDtos.AiRecommendationResponse toResponse(
+            AiComboResponse aiResponse,
             MenuDtos.FoodSuggestionRequest request,
             Map<String, MenuItem> menuById,
             List<String> missingQuestions
     ) {
         if (!aiResponse.readyForSuggestions()) {
-            List<String> questions = aiResponse.questions().isEmpty()
-                    ? missingQuestions
-                    : aiResponse.questions();
-            return new MenuDtos.FoodSuggestionResponse(
-                    hasText(aiResponse.message()) ? aiResponse.message() : "A few quick answers will help me suggest the right meal.",
-                    false,
-                    questions,
-                    List.of(),
-                    money(BigDecimal.ZERO)
-            );
+            List<String> questions = aiResponse.questions().isEmpty() ? missingQuestions : aiResponse.questions();
+            return new MenuDtos.AiRecommendationResponse(
+                    "GEMINI", false,
+                    hasText(aiResponse.message()) ? aiResponse.message()
+                            : "A few quick answers will help me suggest the right meal.",
+                    false, questions, List.of(),
+                    money(BigDecimal.ZERO));
         }
 
-        int peopleCount = Math.max(1, request.peopleCount());
-        int limit = request.limit() == null ? 5 : Math.max(1, Math.min(request.limit(), 10));
-        String branchName = hasText(request.branchName()) ? request.branchName().trim() : "Selected branch";
+        int limit   = request.limit() == null ? 5 : Math.max(1, Math.min(request.limit(), 10));
+        int people  = request.peopleCount() == null ? 1 : Math.max(1, request.peopleCount());
 
-        List<MenuDtos.FoodSuggestionItem> suggestions = new ArrayList<>();
-        for (AiFoodSuggestionItem aiItem : aiResponse.suggestions()) {
-            MenuItem menuItem = menuById.get(aiItem.menuItemId());
-            if (menuItem == null) {
-                continue;
-            }
-            BigDecimal price = money(menuItem.getBasePrice());
-            suggestions.add(new MenuDtos.FoodSuggestionItem(
-                    menuItem.getId(),
-                    menuItem.getName(),
-                    price,
-                    hasText(aiItem.reason()) ? aiItem.reason() : "AI-selected match for your preferences",
-                    request.branchId(),
-                    branchName,
-                    price.multiply(BigDecimal.valueOf(peopleCount)).setScale(2, RoundingMode.HALF_UP),
-                    aiItem.optionalAddOns().stream().filter(this::hasText).distinct().limit(2).toList()
+        List<MenuDtos.ComboSuggestion> combos = new ArrayList<>();
+
+        for (AiComboSuggestion aiCombo : aiResponse.suggestions()) {
+            if (combos.size() >= limit) break;
+
+            List<MenuItem> resolvedItems = aiCombo.itemIds().stream()
+                    .map(menuById::get)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+
+            if (resolvedItems.isEmpty()) continue;
+
+            BigDecimal total = resolvedItems.stream()
+                    .map(i -> i.getBasePrice() != null ? i.getBasePrice() : BigDecimal.ZERO)
+                    .reduce(BigDecimal.ZERO, BigDecimal::add)
+                    .setScale(2, RoundingMode.HALF_UP);
+
+            int healthScore = nutritionScoringService.scoreCombo(resolvedItems);
+
+            List<String> tags = aiCombo.wellnessTags().isEmpty()
+                    ? nutritionScoringService.tagsForCombo(resolvedItems, healthScore)
+                    : aiCombo.wellnessTags();
+
+            combos.add(new MenuDtos.ComboSuggestion(
+                    hasText(aiCombo.comboName()) ? aiCombo.comboName() : "Chef's Combo",
+                    resolvedItems.stream()
+                            .map(i -> new MenuDtos.ComboItem(i.getId(), i.getName(), money(i.getBasePrice())))
+                            .collect(Collectors.toList()),
+                    total,
+                    healthScore,
+                    tags,
+                    hasText(aiCombo.reason()) ? aiCombo.reason() : "AI-selected combination for your preferences.",
+                    Math.min(0.95, 0.70 + healthScore / 500.0)
             ));
-            if (suggestions.size() >= limit) {
-                break;
-            }
         }
 
-        if (suggestions.isEmpty()) {
-            return new MenuDtos.FoodSuggestionResponse(
+        if (combos.isEmpty()) {
+            return new MenuDtos.AiRecommendationResponse(
+                    "GEMINI", false,
                     "I could not safely match the AI response to available menu items.",
-                    true,
-                    List.of(),
-                    List.of(),
-                    money(BigDecimal.ZERO)
-            );
+                    true, List.of(), List.of(), money(BigDecimal.ZERO));
         }
 
-        BigDecimal estimatedTotal = suggestions.stream()
-                .map(MenuDtos.FoodSuggestionItem::estimatedTotalCost)
-                .min(BigDecimal::compareTo)
-                .orElse(money(BigDecimal.ZERO));
+        BigDecimal estimatedTotal = combos.get(0).totalPrice()
+                .multiply(BigDecimal.valueOf(people))
+                .setScale(2, RoundingMode.HALF_UP);
 
-        return new MenuDtos.FoodSuggestionResponse(
-                hasText(aiResponse.message()) ? aiResponse.message() : "Here are AI-picked options from the available menu.",
-                true,
-                List.of(),
-                suggestions,
-                estimatedTotal
-        );
+        return new MenuDtos.AiRecommendationResponse(
+                "GEMINI", false,
+                hasText(aiResponse.message()) ? aiResponse.message()
+                        : "Here are AI-curated healthy combos from the available menu.",
+                true, List.of(), combos, estimatedTotal);
     }
 
-    private List<String> nullToEmptyList(List<String> values) {
-        return values == null ? List.of() : values;
+    // ── Helpers ────────────────────────────────────────────────────────────────────
+
+    private List<String> nullToList(List<String> list) {
+        return list == null ? List.of() : list;
     }
 
     private BigDecimal money(BigDecimal value) {
@@ -287,25 +291,29 @@ public class GeminiFoodSuggestionClient implements FoodSuggestionAiClient {
         return value != null && !value.trim().isEmpty();
     }
 
-    private record AiFoodSuggestion(
+    // ── Internal DTO records ───────────────────────────────────────────────────────
+
+    private record AiComboResponse(
             String message,
             boolean readyForSuggestions,
             List<String> questions,
-            List<AiFoodSuggestionItem> suggestions
+            List<AiComboSuggestion> suggestions
     ) {
-        private AiFoodSuggestion {
-            questions = questions == null ? List.of() : questions;
+        private AiComboResponse {
+            questions   = questions   == null ? List.of() : questions;
             suggestions = suggestions == null ? List.of() : suggestions;
         }
     }
 
-    private record AiFoodSuggestionItem(
-            String menuItemId,
+    private record AiComboSuggestion(
+            String comboName,
+            List<String> itemIds,
             String reason,
-            List<String> optionalAddOns
+            List<String> wellnessTags
     ) {
-        private AiFoodSuggestionItem {
-            optionalAddOns = optionalAddOns == null ? List.of() : optionalAddOns;
+        private AiComboSuggestion {
+            itemIds      = itemIds      == null ? List.of() : itemIds;
+            wellnessTags = wellnessTags == null ? List.of() : wellnessTags;
         }
     }
 }
